native_math/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef struct wire_cst_list_prim_f_64_loose {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
void frbgen_kivixa_wire__crate__api__confidence_interval_mean(int64_t port_,
                                                              struct wire_cst_list_prim_f_64_loose *data,
                                                              double confidence_level);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__confidence_interval_proportion(uint64_t successes,
                                                                                    uint64_t n,
                                                                                    double confidence_level);
void frbgen_kivixa_wire__crate__api__confidence_interval_variance(int64_t port_,
                                                                  struct wire_cst_list_prim_f_64_loose *data,
                                                                  double confidence_level);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__convert_number_system(struct wire_cst_list_prim_u_8_strict *value,
                                                                           uint32_t from_base,
                                                                           uint32_t to_base);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__convert_to_all_units(double value,
                                                                          struct wire_cst_list_prim_u_8_strict *from_unit);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__convert_unit(double value,
                                                                  struct wire_cst_list_prim_u_8_strict *from_unit,
                                                                  struct wire_cst_list_prim_u_8_strict *to_unit);
void frbgen_kivixa_wire__crate__api__correlation_covariance(int64_t port_,
                                                            struct wire_cst_list_prim_f_64_loose *x,
                                                            struct wire_cst_list_prim_f_64_loose *y);
void frbgen_kivixa_wire__crate__api__derivative_graph(int64_t port_,
                                                      struct wire_cst_list_prim_u_8_strict *expression,
                                                      struct wire_cst_list_prim_u_8_strict *variable,
                                                      struct wire_cst_list_prim_f_64_loose *x_values);
void frbgen_kivixa_wire__crate__api__differentiate(int64_t port_,
                                                   struct wire_cst_list_prim_u_8_strict *expression,
                                                   struct wire_cst_list_prim_u_8_strict *variable,
                                                   double point,
                                                   uint32_t order);
void frbgen_kivixa_wire__crate__api__distribution_compute(int64_t port_,
                                                          struct wire_cst_list_prim_u_8_strict *distribution_type,
                                                          struct wire_cst_list_prim_f_64_loose *params,
                                                          double x);
void frbgen_kivixa_wire__crate__api__double_integral(int64_t port_,
                                                     struct wire_cst_list_prim_u_8_strict *expression,
                                                     struct wire_cst_list_prim_u_8_strict *x_var,
                                                     struct wire_cst_list_prim_u_8_strict *y_var,
                                                     double x_min,
                                                     double x_max,
                                                     double y_min,
                                                     double y_max,
                                                     uint32_t num_intervals);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__euler_totient(uint64_t n);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__evaluate_expression(struct wire_cst_list_prim_u_8_strict *expression);