lib/src/rust_math/frb_generated.io.dart


  late final _wire__crate__api__confidence_interval_meanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__confidence_interval_mean');
  late final _wire__crate__api__confidence_interval_mean =
      _wire__crate__api__confidence_interval_meanPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              double,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__confidence_interval_proportion(
    int successes,
    int n,
    double confidence_level,
  ) {
    return _wire__crate__api__confidence_interval_proportion(
      successes,
      n,
      confidence_level,
    );
  }

  late final _wire__crate__api__confidence_interval_proportionPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64, ffi.Double)
        >
      >('frbgen_kivixa_wire__crate__api__confidence_interval_proportion');
  late final _wire__crate__api__confidence_interval_proportion =
      _wire__crate__api__confidence_interval_proportionPtr
          .asFunction<WireSyncRust2DartDco Function(int, int, double)>();

  void wire__crate__api__confidence_interval_variance(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
    double confidence_level,
  ) {
    return _wire__crate__api__confidence_interval_variance(
      port_,
      data,
      confidence_level,
    );
  }

  late final _wire__crate__api__confidence_interval_variancePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__confidence_interval_variance');
  late final _wire__crate__api__confidence_interval_variance =
      _wire__crate__api__confidence_interval_variancePtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              double,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__convert_number_system(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> value,
    int from_base,
    int to_base,
  ) {
    return _wire__crate__api__convert_number_system(value, from_base, to_base);
  }

  late final _wire__crate__api__convert_number_systemPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Uint32,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__convert_number_system');
  late final _wire__crate__api__convert_number_system =
      _wire__crate__api__convert_number_systemPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              int,
              int,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__convert_to_all_units(
    double value,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> from_unit,
  ) {
    return _wire__crate__api__convert_to_all_units(value, from_unit);
  }

  late final _wire__crate__api__convert_to_all_unitsPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Double,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__convert_to_all_units');
  late final _wire__crate__api__convert_to_all_units =
      _wire__crate__api__convert_to_all_unitsPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              double,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__convert_unit(
    double value,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> from_unit,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> to_unit,
  ) {
    return _wire__crate__api__convert_unit(value, from_unit, to_unit);
  }

  late final _wire__crate__api__convert_unitPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Double,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__convert_unit');
  late final _wire__crate__api__convert_unit =
      _wire__crate__api__convert_unitPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              double,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__correlation_covariance(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> x,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> y,
  ) {
    return _wire__crate__api__correlation_covariance(port_, x, y);
  }

  late final _wire__crate__api__correlation_covariancePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__correlation_covariance');
  late final _wire__crate__api__correlation_covariance =
      _wire__crate__api__correlation_covariancePtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            )
          >();

  void wire__crate__api__derivative_graph(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> x_values,
  ) {
    return _wire__crate__api__derivative_graph(
      port_,
      expression,
      variable,
      x_values,
    );
  }

  late final _wire__crate__api__derivative_graphPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__derivative_graph');
  late final _wire__crate__api__derivative_graph =
      _wire__crate__api__derivative_graphPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            )
          >();

  void wire__crate__api__differentiate(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double point,
    int order,
  ) {
    return _wire__crate__api__differentiate(
      port_,
      expression,
      variable,
      point,
      order,
    );
  }

  late final _wire__crate__api__differentiatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__differentiate');
  late final _wire__crate__api__differentiate =
      _wire__crate__api__differentiatePtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              int,
            )
          >();

  void wire__crate__api__distribution_compute(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> distribution_type,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> params,
    double x,
  ) {
    return _wire__crate__api__distribution_compute(
      port_,
      distribution_type,
      params,
      x,
    );
  }

  late final _wire__crate__api__distribution_computePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__distribution_compute');
  late final _wire__crate__api__distribution_compute =
      _wire__crate__api__distribution_computePtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              double,
            )
          >();

  void wire__crate__api__double_integral(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> x_var,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> y_var,
    double x_min,
    double x_max,
    double y_min,
    double y_max,
    int num_intervals,
  ) {
    return _wire__crate__api__double_integral(
      port_,
      expression,
      x_var,
      y_var,
      x_min,
      x_max,
      y_min,
      y_max,
      num_intervals,
    );
  }

  late final _wire__crate__api__double_integralPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__double_integral');
  late final _wire__crate__api__double_integral =
      _wire__crate__api__double_integralPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              double,
              double,
              double,
              int,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__euler_totient(int n) {
    return _wire__crate__api__euler_totient(n);
  }

  late final _wire__crate__api__euler_totientPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__euler_totient',
      );
  late final _wire__crate__api__euler_totient =
      _wire__crate__api__euler_totientPtr
          .asFunction<WireSyncRust2DartDco Function(int)>();

  WireSyncRust2DartDco wire__crate__api__evaluate_expression(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
  ) {
    return _wire__crate__api__evaluate_expression(expression);
  }

  late final _wire__crate__api__evaluate_expressionPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__evaluate_expression');
  late final _wire__crate__api__evaluate_expression =
      _wire__crate__api__evaluate_expressionPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();
